batch transfer class overlap bug fixed, language change bug fixed, exam bugs fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@933 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/configuration/settings.css
+++ b/public/stylesheets/configuration/settings.css
@@ -26,3 +26,6 @@ form{
     margin: 0 auto;
     width: 560px;
 }
+.label-field-pair label{
+    width: 240px !important;
+}
